# Totsu

./: LICENSE  README.md
PrimalDualIPM/html/: _primal_dual_i_p_m_8h.html  _primal_dual_i_p_m_8h.js  class_primal_dual_i_p_m.js  class_primal_dual_i_p_m__inherit__graph.map  class_primal_dual_i_p_m_a5f9289c5b897e715e68cc29e6c88eac0_icgraph.map  class_primal_dual_i_p_m_a9b94e0b86ac149e07a9895f3a82ade40_icgraph.map  class_q_c_q_p.html  class_q_p.js  class_q_p_a1e61cc49c7696778b3c50a2b50147513_cgraph.md5  class_s_o_c_p_a693622154f459a9b63def94d00f8efa8_cgraph.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  hierarchy.js  inherit_graph_0.md5  navtreedata.js
PrimalDualIPM/html/search/: all_6.js  all_a.js  classes_0.js
_obsolete/examples/svm_toyprob/: Cargo.toml  README.md  plot.py
_obsolete/examples/trajplan_toyprob/: Cargo.toml  README.md  plot.py
_obsolete/solver/doxygen/: Doxyfile
_obsolete/solver/src/: PrimalDualIPM.cpp  PrimalDualIPM.h  QP.h  test.cpp
_obsolete/solver/vs2013/: vs2013.vcxproj
_obsolete/solver_rust/: README.md
_obsolete/solver_rust/src/: mat.rs  matgen.rs  matlinalg.rs  matsvd.rs  pdipm.rs  qp.rs  sdp.rs  socp.rs
book/: .gitignore  book.json  book.toml  memo.txt
book/src/: SUMMARY.md  combine.md  conic_lp.md  init_term_cri.md  pock_chambolle.md  reference.md  selfdual_embed.md  separable_problem.md  solver_form.md  totsu_book.md
docs/: index.html  params.json
docs/book/: 404.html  combine.html  conic_lp.html  index.html  init_term_cri.html  pock_chambolle.html  print.html  reference.html  search_plus_index.json  searchindex.js  searchindex.json  selfdual_embed.html  separable_problem.html  sitemap.xml  solver_form.html  totsu_book.html
examples/: .gitignore  Cargo.toml  README.md  exec_all.sh
examples/ctrl_toyprob/: Cargo.toml  README.md  plot.py
examples/imgnr_udef/: Cargo.toml  README.md
examples/imgnr_udef/src/: laplacian.rs  main.rs  prob_cone.rs  prob_op_a.rs  prob_op_b.rs  prob_op_c.rs
examples/imgproc/: Cargo.toml
examples/l1reg_lp/: Cargo.toml  README.md
examples/l1reg_lp/src/: main.rs
examples/l1reg_toyprob/: Cargo.toml  README.md
examples/leastsq_qp/: Cargo.toml
examples/nostd_cortex-m/: Cargo.toml  log_qemu.txt  memory.x  run_qemu.sh
examples/nostd_cortex-m/src/: main.rs
examples/partitioning_sdp/: Cargo.toml  README.md
examples/partitioning_sdp/src/: main.rs
examples/svm_qp/: Cargo.toml  README.md
examples/svm_qp/src/: contour_series.rs  main.rs
examples/svm_toyprob/: .gitignore  README.md
examples/toruscompl_socp/: Cargo.toml  README.md
examples/toruscompl_socp/src/: main.rs
examples/trajplan_qcqp/: Cargo.toml  README.md
examples/trajplan_qcqp/src/: main.rs
examples/trajplan_toyprob/: .gitignore  README.md
examples/utils/: Cargo.toml
examples/utils2/: Cargo.toml
experimental/benchmark_lp/: Cargo.toml
experimental/benchmark_qp/: Cargo.toml
experimental/benchmark_qp/src/: main.rs
experimental/imgproc/: Cargo.toml  README.md
experimental/imgproc/src/: laplacian.rs  main.rs  prob_op_a.rs  prob_op_b.rs  prob_op_c.rs
experimental/l1reg_lp/: Cargo.toml  plot.py
experimental/leastsq_qp/: Cargo.toml
experimental/maxcut_sdp/: Cargo.toml
experimental/maxcut_sdp/src/: main.rs
experimental/nostd_cortex-m/: Cargo.toml
experimental/svm_qp/: .gitignore  Cargo.toml  README.md
experimental/toruscompl_socp/: Cargo.toml
solver/doxygen/: doxygen.sh  new_header.html
solver/macports/: Makefile
solver/src/: PrimalDualIPM.cpp  QCQP.cpp  QCQP.h  SOCP.cpp  SOCP.h  mainpage.md
solver/vs2013/: vs2013.vcxproj.filters
solver_gpu/src/: PrimalDualIPM.cpp  PrimalDualIPM.h  QP.cpp  test.cpp
solver_gpu/vs2013/: vs2013.sln  vs2013.vcxproj  vs2013.vcxproj.filters
solver_rust/: Cargo.toml  README.md
solver_rust/src/: lib.rs  lp.rs  mat.rs  matgen.rs  matlinalg.rs  matsolver.rs  matsvd.rs  matsvdsolve.rs  operator.rs  pdipm.rs  qcqp.rs  qp.rs  sdp.rs  socp.rs  spmat.rs
solver_rust_conic/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
solver_rust_conic/src/: cone.rs  f64lapack.rs  floatgeneric.rs  lib.rs  linalg.rs  linalgex.rs  logger.rs  matbuild.rs  matop.rs  nulllogger.rs  problp.rs  probqcqp.rs  probqp.rs  probsdp.rs  probsocp.rs  proj.rs  solver.rs  solver_error.rs  stdlogger.rs  tests.rs  utils.rs
solver_rust_conic/src/cone/: mod.rs  psd.rs  rotsoc.rs  rpos.rs  soc.rs  zero.rs
solver_rust_conic/src/linalg/: f32cuda.rs  f64cuda.rs  f64lapack.rs  floatgeneric.rs  mod.rs
solver_rust_conic/src/logger/: mod.rs  nulllogger.rs  stdlogger.rs
solver_rust_conic/src/operator/: matbuild.rs  matop.rs  mod.rs  reffn.rs
solver_rust_conic/src/problem/: lp.rs  mod.rs  qcqp.rs  qp.rs  sdp.rs  socp.rs
solver_rust_conic/src/tests/: smoke.rs
solver_rust_conic/tests/: lp.rs  qcqp.rs  qp.rs  sdp.rs  socp.rs  solver.rs
solver_rust_conic/totsu/: CHANGELOG.md  Cargo.toml  README.md
solver_rust_conic/totsu/src/: lib.rs  matbuild.rs
solver_rust_conic/totsu/src/matbuild/: ex.rs  mod.rs
solver_rust_conic/totsu/src/problem/: lp.rs  mod.rs  qcqp.rs  qp.rs  sdp.rs  socp.rs
solver_rust_conic/totsu/tests/: lp.rs  qcqp.rs  qp.rs  sdp.rs  socp.rs
solver_rust_conic/totsu_core/: CHANGELOG.md  Cargo.toml  README.md
solver_rust_conic/totsu_core/src/: cone_psd.rs  cone_rotsoc.rs  cone_rpos.rs  cone_soc.rs  cone_zero.rs  floatgeneric.rs  lib.rs  linalg_ex.rs  matop.rs
solver_rust_conic/totsu_core/src/solver/: cone.rs  linalg.rs  mod.rs  operator.rs  slicelike.rs  solver.rs  solver_error.rs
solver_rust_conic/totsu_core/tests/: solver.rs
solver_rust_conic/totsu_f32cuda/: CHANGELOG.md  Cargo.toml  README.md
solver_rust_conic/totsu_f32cuda/kernel/: kernel.cu  kernel.ptx
solver_rust_conic/totsu_f32cuda/src/: cuda_mgr.rs  cusolver_sys_partial.rs  f32cuda.rs  f32cuda_slice.rs  lib.rs
solver_rust_conic/totsu_f32cuda/tests/: solver.rs
solver_rust_conic/totsu_f64lapack/: CHANGELOG.md  Cargo.toml  README.md
solver_rust_conic/totsu_f64lapack/src/: f64lapack.rs  lib.rs
solver_rust_conic/totsu_f64lapack/tests/: solver.rs
(+130 files in other folders)
