[package]
name = "totsu"
version = "0.8.1"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2018"

description = "A first-order conic solver for continuous scalar convex optimization problems."

#documentation = "..."
homepage = "https://github.com/convexbrain/Totsu/tree/master/solver_rust_conic"
repository = "https://github.com/convexbrain/Totsu"

readme = "README.md"

keywords = ["convex", "optimization", "conic", "solver"]

categories = ["science"]

license = "Unlicense"

[features]
default = ["std"]

std = ["num-traits/std"]
f64lapack = ["lapacke", "cblas"]
libm = ["num-traits/libm"]

[package.metadata.docs.rs]
features = ["f64lapack"]

[dependencies]
log = "0.4.14"
lapacke = {version = "0.5.0", optional = true}
cblas = {version = "0.4.0", optional = true}

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dev-dependencies]
float_eq = "0.6.1"
env_logger = "0.9.0"

[dev-dependencies.intel-mkl-src]
default-features = false
version = "0.6.0+mkl2020.1"
features = ["mkl-static-lp64-seq"]
