[package]
name = "totsu"
version = "0.9.1"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"

description = "A first-order conic solver for continuous scalar convex optimization problems."

#documentation = "..."
homepage = "https://github.com/convexbrain/Totsu/tree/master/solver_rust_conic"
repository = "https://github.com/convexbrain/Totsu"

readme = "README.md"

keywords = ["convex", "optimization", "conic", "solver"]

categories = ["science"]

license = "Unlicense"

[features]
#default = ["std"]
default = ["std", "f32cuda"] # TODO

std = ["num-traits/std"]

f64lapack = ["lapacke", "cblas"]
f32cuda = ["cublas", "rustacuda", "once_cell"]

libm = ["num-traits/libm"]

[package.metadata.docs.rs]
features = ["f64lapack"]

[dependencies]
log = "0.4.17"

lapacke = {version = "0.5.0", optional = true}
cblas = {version = "0.4.0", optional = true}

cublas = {version = "0.2.0", optional = true}
rustacuda = {version = "0.1.3", optional = true}
once_cell = {version = "1.14.0", optional = true}

[dependencies.num-traits]
version = "0.2.15"
default-features = false

[dev-dependencies]
float_eq = "1.0.0"
env_logger = "0.9.0"

[dev-dependencies.intel-mkl-src]
default-features = false
version = "0.7.0"
features = ["mkl-static-lp64-seq"]
