[package]
name = "totsu"
version = "0.9.1"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"

description = "A first-order conic solver for continuous scalar convex optimization problems."

#documentation = "..."
homepage = "https://github.com/convexbrain/Totsu/tree/master/solver_rust_conic"
repository = "https://github.com/convexbrain/Totsu"

readme = "README.md"

keywords = ["convex", "optimization", "conic", "solver"]

categories = ["science"]

license = "Unlicense"

[features]
#default = ["std"]
# TODO: restore
default = ["std", "f64lapack", "f32cuda"]

std = ["num-traits/std"]

f64lapack = ["lapacke", "cblas"]
f32cuda = ["rustacuda", "cublas-sys", "libc"]

libm = ["num-traits/libm"]

[package.metadata.docs.rs]
features = ["f64lapack"]

[dependencies]
log = "0.4.17"

lapacke = {version = "0.5.0", optional = true}
cblas = {version = "0.4.0", optional = true}

cublas-sys = {version = "0.1.0", optional = true}
rustacuda = {version = "0.1.3", optional = true}
libc = {version = "0.2.132", optional = true}

[dependencies.num-traits]
version = "0.2.15"
default-features = false

[dev-dependencies]
float_eq = "1.0.0"
env_logger = "0.9.0"

[dev-dependencies.intel-mkl-src]
default-features = false
version = "0.7.0"
features = ["mkl-static-lp64-seq"]
