[package]
name = "imgnr_udef"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = {path = "../../solver_rust_conic", features = ["f64lapack"]}
utils = {path = "../utils"}
env_logger = "0.9.0"
anyhow = "1.0.61"
image = "0.24.3"
log = "0.4.17"
cblas = "0.4.0"

[dependencies.intel-mkl-src]
default-features = false
git = 'https://github.com/convexbrain/intel-mkl-src' #patch
branch = 'branch_from_intel-mkl-src-v0.7.0' #patch
features = ["mkl-static-lp64-iomp"]

[dev-dependencies]
float_eq = "1.0.0"
