[package]
name = "imgnr_udef"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = "0.10.0"
totsu_core = "0.1.0"
totsu_f64lapack = "0.1.0"
# TODO: remove utils/ dir
utils = {path = "../utils2", package="utils2"}
env_logger = "0.9.1"
anyhow = "1.0.65"
image = "0.24.3"
log = "0.4.17"
cblas = "0.4.0"

# TODO: intel-mkl-src
[dependencies.intel-mkl-src]
default-features = false
git = 'https://github.com/convexbrain/intel-mkl-src' #patch
branch = 'branch_from_intel-mkl-src-v0.7.0' #patch
features = ["mkl-static-lp64-iomp"]

[dev-dependencies]
float_eq = "1.0.0"
