[package]
name = "l1reg_lp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = "0.10.2"
utils = {path = "../utils2", package = "utils2"}
rand = "0.8.5"
itertools = "0.10.5"
rand_xoshiro = "0.6.0"
env_logger = "0.10.0"
plotters = "0.3.4"
anyhow = "1.0.68"
