[package]
name = "nostd_cortex-m"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
panic-semihosting = {version = "0.5.6", features = ["exit"]}
log = "0.4.14"

[dependencies.totsu]
path = "../../solver_rust_conic"
default-features = false
features = ["libm"]

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[profile.dev]
opt-level = 1      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
