[package]
name = "partitioning_sdp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = {path = "../../solver_rust_conic", features = ["f64lapack"]}
utils = {path = "../utils"}
rand_distr = "0.4.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
env_logger = "0.9.0"
plotters = "0.3.2"
anyhow = "1.0.61"

[dependencies.intel-mkl-src]
default-features = false
git = 'https://github.com/convexbrain/intel-mkl-src' #patch
branch = 'branch_from_intel-mkl-src-v0.7.0' #patch
features = ["mkl-static-lp64-iomp"]
