[package]
name = "partitioning_sdp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = "0.10.1"
totsu_core = "0.1.0"
totsu_f64lapack = "0.1.0"
utils = {path = "../utils2", package = "utils2"}
rand_distr = "0.4.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
env_logger = "0.9.1"
plotters = "0.3.4"
anyhow = "1.0.65"
intel-mkl-src = {version = "0.8.1", features = ["mkl-static-lp64-iomp"]}
