[package]
name = "svm_qp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = "0.10.2"
totsu_f64lapack = "0.1.1"
utils = {path = "../utils2", package = "utils2"}
rand = "0.8.5"
rand_xoshiro = "0.6.0"
env_logger = "0.10.0"
plotters = "0.3.4"
num-traits = "0.2.15"
anyhow = "1.0.68"
intel-mkl-src = {version = "0.8.1", features = ["mkl-static-lp64-seq"]}
