[package]
name = "toruscompl_socp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = "0.10.0"
totsu_f64lapack = "0.1.0"
utils = {path = "../utils2", package = "utils2"}
env_logger = "0.9.1"
itertools = "0.10.5"
plotters = "0.3.4"
anyhow = "1.0.65"

[dependencies.intel-mkl-src]
default-features = false
git = 'https://github.com/convexbrain/intel-mkl-src' #patch
branch = 'branch_from_intel-mkl-src-v0.7.0' #patch
features = ["mkl-static-lp64-iomp"]
