[package]
name = "trajplan_qcqp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
totsu = {path = "../../solver_rust_conic", features = ["f64lapack"]}
env_logger = "0.8.3"

[dependencies.intel-mkl-src]
default-features = false
version = "0.6.0+mkl2020.1"
features = ["mkl-static-lp64-seq"]
#path = "../../../../others/intel-mkl-src/intel-mkl-src"
#features = ["mkl-static-lp64-iomp"]
