[package]
name = "trajplan_qcqp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = {path = "../../solver_rust_conic", features = ["f64lapack"]}
utils = {path = "../utils"}
env_logger = "0.9.0"
plotters = "0.3.1"
anyhow = "1.0.43"

[dependencies.intel-mkl-src]
default-features = false
version = "0.6.0+mkl2020.1"
features = ["mkl-static-lp64-seq"]
#path = "../../../../others/intel-mkl-src/intel-mkl-src"
#features = ["mkl-static-lp64-iomp"]
