[package]
name = "benchmark_qp"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = {path = "../../solver_rust_conic/totsu"}
totsu_f32cuda = {path = "../../solver_rust_conic/totsu_f32cuda"}
rand = "0.8.5"
rand_xoshiro = "0.6.0"
env_logger = "0.9.1"
anyhow = "1.0.65"
