[package]
name = "imgproc"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
totsu = {path = "../../solver_rust_conic", features = ["f64lapack"]}
utils = {path = "../../examples/utils"}
env_logger = "0.9.0"
anyhow = "1.0.43"
image = "0.23.14"

[dependencies.intel-mkl-src]
default-features = false
version = "0.6.0+mkl2020.1"
git = 'https://github.com/convexbrain/intel-mkl-src'
branch = 'branch_from_0.6.0+mkl2020.1'
features = ["mkl-static-lp64-iomp"]
