[package]
name = "totsu"
version = "0.10.1"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"

description = "Convex optimization problems LP/QP/QCQP/SOCP/SDP that can be solved by `totsu_core`."

#documentation = "..."
homepage = "https://github.com/convexbrain/Totsu/tree/master/solver_rust_conic/totsu"
repository = "https://github.com/convexbrain/Totsu"

readme = "README.md"

keywords = ["convex", "optimization", "conic", "solver"]

categories = ["science"]

license = "Unlicense"

[dependencies]
log = "0.4.17"
num-traits = "0.2.15"

[dependencies.totsu_core]
version = "0.1.0"
#path = "../totsu_core"

[dev-dependencies]
float_eq = "1.0.1"
env_logger = "0.10.0"
