[package]
name = "totsu_f64lapack"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"

description = "A first-order conic solver for continuous scalar convex optimization problems."

#documentation = "..."
homepage = "https://github.com/convexbrain/Totsu/tree/master/solver_rust_conic"
repository = "https://github.com/convexbrain/Totsu"

readme = "README.md"

keywords = ["convex", "optimization", "conic", "solver"]

categories = ["science"]

license = "Unlicense"

[dependencies]
log = "0.4.17"
lapacke = "0.5.0"
cblas = "0.4.0"
num-traits = "0.2.15"

[dependencies.totsu_core]
# TODO: version
path = "../totsu_core"

[dev-dependencies]
float_eq = "1.0.0"
env_logger = "0.9.0"

[dev-dependencies.intel-mkl-src]
default-features = false
version = "0.7.0"
features = ["mkl-static-lp64-seq"]
