[package]
name = "totsu_f64lapack"
# TODO: version in release branch
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2021"

description = "BLAS/LAPACK linear algebra operations for `totsu`/`totsu_core`."

#documentation = "..."
homepage = "https://github.com/convexbrain/Totsu/tree/master/solver_rust_conic/totsu_f64lapack"
repository = "https://github.com/convexbrain/Totsu"

readme = "README.md"

keywords = ["convex", "optimization", "conic", "solver"]

categories = ["science"]

license = "Unlicense"

[dependencies]
lapacke = "0.5.0"
cblas = "0.4.0"
num-traits = "0.2.15"

[dependencies.totsu_core]
# TODO: version in release branch
path = "../totsu_core"

[dev-dependencies]
float_eq = "1.0.0"
env_logger = "0.9.0"

[dev-dependencies.intel-mkl-src]
version = "0.8.1"
features = ["mkl-static-lp64-seq"]
